--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 .sound-button {
-  width: 100px;
   height: 50px;
   font-size: 20px;
   background-color: #333;
@@ -22,6 +21,7 @@ body {
   border-radius: 5px;
   margin: 10px;
   cursor: pointer;
+  padding: 5px 30px;
 }
 .sound-button:hover {
   background-color: #fff;
